@@ -51,6 +51,24 @@ class TestBrowserCheckout(TestCase):
             z3cform.erroneous_fields(form))
 
     @browsing
+    def test_contact_information_defaults_for_logged_in_user(self, browser):
+        hugo = create(Builder('user').named('H\xc3\xbcgo', 'B\xc3\xb6ss'))
+        browser.login(hugo)
+
+        checkout.visit_checkout_with_one_item_in_cart()
+        checkout.next()
+        checkout.assert_step(checkout.CONTACT_INFORMATION)
+
+        self.assertEquals(
+            hugo.getProperty('fullname').split(' ')[1].decode('utf-8'),
+            browser.css(
+                '[name="contact_information.widgets.lastname"]').first.value)
+        self.assertEquals(
+            hugo.getProperty('fullname').split(' ')[0].decode('utf-8'),
+            browser.css(
+                '[name="contact_information.widgets.firstname"]').first.value)
+
+    @browsing
     def test_submitting_contact_information_leads_to_shipping_address(self, browser):
         checkout.visit_checkout_with_one_item_in_cart()
         checkout.submit_valid_contact_info()
